--- a/wear/src/main/res/values/strings.xml
+++ b/wear/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Run4ThirteenWeeks</string>
     <string name="hello_round">Hello Round World!</string>
     <string name="hello_square">Hello Square World!</string>
+    <string name="done">Done</string>
 </resources>
